--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
 DATABASE_URL=mongodb+srv://root:81BLSAsFkLujnCRr@cluster0.xfghgxz.mongodb.net/upTask
+FRONTEND_URL=http://localhost:5173
+
+SMTP_HOST=sandbox.smtp.mailtrap.io
+SMTP_PORT=2525
+SMTP_USER=f6494fae870538
+SMTP_PASS=dba9544c2e64a5
+
+JWT_SECRET=LSNVGFYRHH
