--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DATABASE_URL=mongodb+srv://root:81BLSAsFkLujnCRr@cluster0.xfghgxz.mongodb.net/upTask
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://up-task-frontend-nine-chi.vercel.app
 
 SMTP_HOST=sandbox.smtp.mailtrap.io
 SMTP_PORT=2525
